--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "pokedex",
   "version": "0.1.0",
   "private": false,
@@ -20,7 +21,8 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/node": "18.14.2",
