--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "type": "module",
   "name": "pokedex",
   "version": "0.1.0",
   "private": false,
@@ -15,14 +14,14 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "next": "^13.2.1",
-    "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-spinners": "^0.13.8"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@types/node": "18.14.2",
